--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.3.6",
     "dart-sass": "^1.25.0",
     "formik": "^2.2.9",
+    "prism-react-renderer": "^2.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
