--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@dropzone-ui/core": "^1.1.1",
+    "@dropzone-ui/react": "^7.0.4",
     "@emotion/react": "^11.10.8",
     "@emotion/styled": "^11.10.8",
     "@mui/icons-material": "^5.11.16",
@@ -16,6 +18,7 @@
     "@types/react-dom": "^18.2.1",
     "axios": "^1.3.6",
     "dart-sass": "^1.25.0",
+    "dropzone": "^6.0.0-beta.2",
     "formik": "^2.2.9",
     "prism-react-renderer": "^2.0.3",
     "react": "^18.2.0",
@@ -50,5 +53,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/dropzone": "^5.7.4"
   }
 }
