--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@dropzone-ui/core": "^1.1.1",
-    "@dropzone-ui/react": "^7.0.4",
+    "@dropzone-ui/react": "^6.7.1",
     "@emotion/react": "^11.10.8",
     "@emotion/styled": "^11.10.8",
     "@mui/icons-material": "^5.11.16",
@@ -19,10 +18,14 @@
     "axios": "^1.3.6",
     "dart-sass": "^1.25.0",
     "dropzone": "^6.0.0-beta.2",
+    "filepond": "^4.30.4",
+    "filepond-plugin-image-exif-orientation": "^1.0.11",
+    "filepond-plugin-image-preview": "^4.6.11",
     "formik": "^2.2.9",
     "prism-react-renderer": "^2.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-filepond": "^7.1.2",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "react-simple-code-editor": "^0.13.1",
@@ -53,8 +56,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@types/dropzone": "^5.7.4"
   }
 }
