--- a/package.json
+++ b/package.json
@@ -15,6 +15,12 @@
     "@types/node": "^16.18.25",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.1",
+
+    "@tiptap/extension-code-block-lowlight": "^2.0.0-beta.212",
+    "@tiptap/pm": "^2.0.0-beta.212",
+    "@tiptap/react": "^2.0.0-beta.212",
+    "@tiptap/starter-kit": "^2.0.0-beta.212",
+    
     "axios": "^1.3.6",
     "dart-sass": "^1.25.0",
     "dropzone": "^6.0.0-beta.2",
