--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@dropzone-ui/react": "^6.7.1",
     "@emotion/react": "^11.10.8",
     "@emotion/styled": "^11.10.8",
+    "@files-ui/react": "^1.0.8",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.12.2",
     "@testing-library/jest-dom": "^5.16.5",
@@ -15,12 +16,6 @@
     "@types/node": "^16.18.25",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.1",
-
-    "@tiptap/extension-code-block-lowlight": "^2.0.0-beta.212",
-    "@tiptap/pm": "^2.0.0-beta.212",
-    "@tiptap/react": "^2.0.0-beta.212",
-    "@tiptap/starter-kit": "^2.0.0-beta.212",
-    
     "axios": "^1.3.6",
     "dart-sass": "^1.25.0",
     "dropzone": "^6.0.0-beta.2",
